# plcurve

./: .gitattributes  .gitignore  AUTHORS  INSTALL  Justifications  Makefile.am  McDevitt  McDevitt.tex  README  TODO  acinclude.m4  autogen.sh  check_error_nums  compEric.f  configsonoma.sh  configure.ac  do_gcov  err_list  exit_failure_tests.c  force_closed.c  getHomflyFromMingFile.prl  homfly.h  kl_3_1_I.vect  knot_diagram.c  loopclosure_test.c  matrix.c  matrix.h  nearest_neighbor.c  nn_test.c  nplCurve.c  nplCurve.h  nvector.c  plConvert  plCurve.c  plCurve.h  plCurve.i  plCurve.pod  plCurve.typemap  plUnconvert  plcRandomPolygon.c  (+24 more)
attic/: do_gcov  (+2 more)
judy/src/: Makefile  Makefile.am
planarmap/: Makefile.am  PMconjugation.c  PMconjugation.h  PMdef.c  PMdef.h  PMdisplay.c  PMplanmap.c  interface.c  planarmap.c  stats.c  stats.h
pysrc/: .gitignore  Makefile.am  pdstor.py  setup.py
pysrc/cassandra/: cassstor.py  iface.py  iface_insert.py
pysrc/doc/: conf.py  index.rst
pysrc/libpl/: data.py  graphs.py  gsl_rng.pxd  pdcode.pxd  pdcode.pyx  pdisomorphism.pxd  pdisomorphism.pyx  pdstor.pyx  plCurve_h.pxd  plcurve.pxd  plcurve.pyx  tsmcmc.pxd  tsmcmc.pyx
pysrc/test/: suite.py  test_editor.py  test_homfly_polynomial.py  test_pdcode.py  test_pdcode_python.py  test_pdstor.py  test_plcurve.py  test_shadow_rm.py
pysrc/tests/: test_editor.py  test_homfly_polynomial.py  test_pdcode_python.py
src/: Makefile.am  __init__.py  arg_date.c  arg_dbl.c  arg_end.c  arg_file.c  arg_int.c  arg_lit.c  arg_rem.c  arg_rex.c  arg_str.c  argtable2.c  buildclassifykt.nb  carbonizepd.c  composite_knots.nb  computepd.c  connectsum.c  exit_failure_tests.c  filterpd.c  getHomflyFromMingFile.prl  getopt.c  getopt.h  geyer_estimators.c  geyer_estimators.h  headerscan.py  homfly.h  hypersimplex_sampling.c  joinpd.c  kascentpermutation.c  knot_diagram.c  lmpoly02.c  matrix.c  minrad.c  momentpolytope.c  mrlocs.c  nearest_neighbor.c  nplCurve.c  nplCurve.h  nvector.c  octcnv2.h  (+93 more)
src/python/: setup.py
test/: Makefile.am  Test.vect  assemble_isotest.py  assemble_tangleregentest.py  assemble_tangleslideinput.py  assemble_tangleslideops.py  assembletests.py  bad_11.vect  bad_4.vect  bad_5.vect  call_check.c  ccode_test.c  check_error_nums  csu_random_polygon_test.c  diagram_wye_isotopy_types.nb  eq_primitives_test.c  geyer_tests.c  hopf_test.c  loopclosure_test.c  nn_test.c  octrope_timing.c  random_sap_test.c  randompolygon_test.c  randomwalk_test_test.c  rolfsennames.txt  rolfsentable.txt  run_tests.c  split_diagram_test_instructions.txt  symmetry_test.c  tangle_slide_operation_test_instructions.txt  tangle_slide_test_instructions.txt  test_2crossing.c  test_bad_homfly.c  test_crossingops.c  test_csv_reader.c  test_diagram_isotopic.c  test_dihedral.c  test_findpoca.c  test_homfly.c  test_hopf  (+28 more)
test/bad_vects/: bad_10.vect  bad_12.vect  bad_7.vect
test/tangle_ops_tests/: doit  tangle_slide_operation_testa.c  tangle_slide_operation_testa_after.pdstor  tangle_slide_operation_testa_before.pdstor  tangle_slide_operation_testc.c  tangle_slide_operation_testc_after.c  tangle_slide_operation_testc_after.pdstor  tangle_slide_operation_testc_before.c  tangle_slide_operation_testc_before.pdstor  tangle_slide_operation_testd.doc  tangle_slide_operation_testd_after.c  tangle_slide_operation_testd_after.pdstor  tangle_slide_operation_testd_before.c  tangle_slide_operation_testd_before.pdstor  tangle_slide_ops_testc_combined.c  tangle_slide_ops_testd_combined.c
test/tangle_regen_tests/: assemble_tangleregentest.py  doit  tangle_testZ.c  tangle_testZ.doc  tangle_testZ_combined.c  tangle_testa.c  tangle_testa_combined.c  tangle_testc.c  tangle_testc.doc  tangle_testc.pdstor  tangle_testc_combined.c  tangle_testd.c  tangle_testd.doc  tangle_testd_combined.c  tangle_teste.c  tangle_teste_combined.c  tangle_testf.c  tangle_testf.doc  tangle_testf_combined.c  tangle_testg.c  tangle_testg.doc  tangle_testg_combined.c  tangle_testh.c  tangle_testh.doc  tangle_testh_combined.c  tangle_testi.c  tangle_testi_combined.c  tangle_testj.c  tangle_testj.doc  tangle_testj_combined.c  tangle_testk.c  tangle_testk.doc  tangle_testk_combined.c  test_tangle_regenerate_auto.c
test/tangle_slide_input_tests/: doit  tangle_slide_input_testW.c  tangle_slide_input_testW.doc  tangle_slide_input_testW_combined.c  tangle_slide_input_testX.c  tangle_slide_input_testX_combined.c  tangle_slide_input_testY.c  tangle_slide_input_testY.doc  tangle_slide_input_testY_combined.c  tangle_slide_input_testZ.c  tangle_slide_input_testZ.pdstor  tangle_slide_input_testZ_combined.c  tangle_slide_input_testa.c  tangle_slide_input_testa.doc  tangle_slide_input_testa.pdstor  tangle_slide_input_testa_combined.c  tangle_slide_input_testb.c  tangle_slide_input_testb.doc  tangle_slide_input_testb_combined.c  tangle_slide_input_testc.c  tangle_slide_input_testc_combined.c  tangle_slide_input_testd.c  tangle_slide_input_testd.doc  tangle_slide_input_testd_combined.c  tangle_slide_input_teste.c  tangle_slide_input_teste.doc  tangle_slide_input_teste_combined.c  tangle_slide_input_testf.c  tangle_slide_input_testf.doc  tangle_slide_input_testf.pdstor  tangle_slide_input_testf_combined.c  tangle_slide_input_testg.c  tangle_slide_input_testg.pdstor  tangle_slide_input_testg_combined.c  tangle_slide_input_testh.c  tangle_slide_input_testh_combined.c  tangle_slide_input_testi.c  tangle_slide_input_testi.doc  tangle_slide_input_testi_combined.c  test_tangle_slide_input_auto.c
test/tot_raw/: tangle_slide_operation_testa.c  tangle_slide_operation_testa_after.pdstor  tangle_slide_operation_testa_before.pdstor  tangle_slide_operation_testb.c  tangle_slide_operation_testb_after.pdstor  tangle_slide_operation_testb_before.pdstor  (+5 more)
tools/: 9-ambigs-kt.txt  Makefile.am  ProduceShadowDrawings.nb  classifierSpec.json  classifyInstance.py  classifykt.m  drawpd.py  knottype.c  mangle.c  mangle.h  ordie.c  ordie.h  orientedshadows.c  pdextract.py  polynomials.c  polynomials.h  processpdstor.c  randomknot.c  shadow2diagram.c  test_pyembed.c  test_random_memleak.c  test_random_memleak.py
(+2392 files in other folders)
