SUBDIRS = src test

dist_data_DATA = data/plCurve.typemap

EXTRA_DIST = data/bad_1.vect data/bad_2.vect data/bad_3.vect \
	     data/bad_4.vect data/bad_5.vect data/bad_6.vect \
	     data/bad_7.vect data/bad_8.vect data/bad_9.vect \
	     data/bad_10.vect data/bad_11.vect data/bad_12.vect \
	     data/bad_13.vect data/bad_14.vect \
	     data/circle_closure_0.vect \
             data/circle_closure_1.vect \
             data/circle_closure_2.vect \
             data/circle_closure_3.vect \
             data/circle_closure_4.vect \
             data/circle_closure_5.vect \
             data/circle_closure_6.vect \
             data/circle_closure_7.vect \
             data/circle_closure_8.vect \
             data/circle_closure_9.vect \
             data/random_closure_0.vect \
             data/random_closure_1.vect \
             data/random_closure_2.vect \
             data/random_closure_3.vect \
             data/random_closure_4.vect \
             data/random_closure_5.vect \
             data/random_closure_6.vect \
             data/random_closure_7.vect \
             data/random_closure_8.vect \
             data/random_closure_9.vect
