SUBDIRS = judy src planarmap pysrc tools test planarity

AM_DISTCHECK_CONFIGURE_FLAGS = --enable-python-otherdir=prefix --disable-cython

dist_data_DATA = data/plCurve.typemap

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = data/circle_closure_0.vect \
             data/circle_closure_1.vect \
             data/circle_closure_2.vect \
             data/circle_closure_3.vect \
             data/circle_closure_4.vect \
             data/circle_closure_5.vect \
             data/circle_closure_6.vect \
             data/circle_closure_7.vect \
             data/circle_closure_8.vect \
             data/circle_closure_9.vect \
             data/random_closure_0.vect \
             data/random_closure_1.vect \
             data/random_closure_2.vect \
             data/random_closure_3.vect \
             data/random_closure_4.vect \
             data/random_closure_5.vect \
             data/random_closure_6.vect \
             data/random_closure_7.vect \
             data/random_closure_8.vect \
             data/random_closure_9.vect
